[package]
name = "capacity_builder"
version = "0.4.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/dsherret/capacity_builder"
description = "Builders where the code to calculate the capacity is the same as the code to write what's being built."

[features]
ecow = ["dep:ecow"]
hipstr = ["dep:hipstr"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
capacity_builder_macros = { version = "0.2.1", path = "./macros" }
ecow = { version = "0.2", optional = true }
hipstr = { version = "0.6", optional = true }
itoa = "1.0.14"

[dev-dependencies]
divan = "0.1.17"

[[bench]]
name = "bench"
harness = false

[workspace]
members = [
  "macros",
]
