[package]
name = "capacity_builder_macros"
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/dsherret/capacity_builder"
description = "Macros for capacity_builder"

[lib]
path = "./lib.rs"
proc-macro = true

[features]
ecow = []
hipstr = []

[dependencies]
quote = "1"
syn = "2"
